WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110443
[BlackBerry] Fix access to ResourceHandle::context
https://bugs.webkit.org/show_bug.cgi?id=110443
Summary
[BlackBerry] Fix access to ResourceHandle::context
Alberto Garcia
Reported
2013-02-21 01:59:30 PST
This changed in
r141981
Attachments
Patch
(1.52 KB, patch)
2013-02-21 02:01 PST
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-02-21 02:01:07 PST
Created
attachment 189481
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-21 04:42:09 PST
Comment on
attachment 189481
[details]
Patch Clearing flags on attachment: 189481 Committed
r143589
: <
http://trac.webkit.org/changeset/143589
>
WebKit Review Bot
Comment 3
2013-02-21 04:42:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug