[BlackBerry] Fix access to ResourceHandle::context https://bugs.webkit.org/show_bug.cgi?id=110443

Patch by Alberto Garcia <albgarcia@rim.com> on 2013-02-21
Reviewed by Carlos Garcia Campos.

This changed in r141981.

* platform/network/blackberry/ResourceHandleBlackBerry.cpp:
(WebCore::ResourceHandle::start):

Canonical link: https://commits.webkit.org/128740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143589 268f45cc-cd09-0410-ab3c-d52691b4dbfc