Source/WebCore/platform/network/blackberry/ResourceHandleBlackBerry.cpp
@@ -113,7 +113,7 @@ bool ResourceHandle::start()
         return false;
 
     // FIXME: clean up use of Frame now that we have NetworkingContext (see RIM Bug #1515)
-    Frame* frame = static_cast<FrameNetworkingContextBlackBerry*>(context)->frame();
+    Frame* frame = static_cast<FrameNetworkingContextBlackBerry*>(d->m_context.get())->frame();
     if (!frame || !frame->loader() || !frame->loader()->client() || !client())
         return false;
     int playerId = static_cast<FrameLoaderClientBlackBerry*>(frame->loader()->client())->playerId();
